cache-manager/overlays/cache-manager-headers-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cache-manager-headers-middleware
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: 'https'
      X-Forwarded-Port: '443'
