cache-manager/overlays/cache-manager-inflightreq-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cache-manager-inflightreq-middleware
spec:
  inFlightReq:
    amount: 100
# protection aux attaques DDOS
